--- a/Proyecto1periodo/tienda.html
+++ b/Proyecto1periodo/tienda.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tienda</title>
 </head>
 <body>
     <h1 style="background-color: rgb(0, 0, 0); text-align: center; border: 20px solid black;">
         <a style="margin-left: 20px; color: rgb(253, 250, 253); font-size: 25px;"> Petits Muchoirs</a>
-        <a style="margin-left: 400px; color: rgb(255, 255, 255); font-size: 25px;" href="./principal.html"> Inicio</a>
+        <a style="margin-left: 400px; color: rgb(255, 255, 255); font-size: 25px;" href="principal.html"> Inicio</a>
         <a style="font-size: 25px; color: rgb(255, 255, 255); margin-left: 30px;" href="tienda.html"> Tienda </a>
         <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="nosotros.html"> Nosotros</a>
         <a style="font-size: 25px; color: rgb(252, 252, 252); margin-left: 30px;" href="contacto.html"> Contacto </a> </h1>
