--- a/Proyecto1periodo/contacto.html
+++ b/Proyecto1periodo/contacto.html
@@ -13,7 +13,9 @@
         <a style="margin-left: 400px; color: rgb(255, 255, 255); font-size: 25px;" href="./principal.html"> Inicio</a>
         <a style="font-size: 25px; color: rgb(255, 255, 255); margin-left: 30px;" href="tienda.html"> Tienda </a>
         <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="nosotros.html"> Nosotros</a>
-        <a style="font-size: 25px; color: rgb(252, 252, 252); margin-left: 30px;" href="contacto.html"> Contacto </a> </h1>
+        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="video1.html">Ver video</a>
+        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="#video1"></a>
+        <a style="font-size: 25px; color: rgb(252, 252, 252); margin-left: 10px;" href="contacto.html">Contacto </a> </h1>
 
         <table style="margin-top: 50px;" width="100%" border="0">
             <tr>
