--- a/Proyecto1periodo/principal.html
+++ b/Proyecto1periodo/principal.html
@@ -11,8 +11,10 @@
         <a style="margin-left: 20px; color: rgb(253, 250, 253); font-size: 25px;"> Petits Muchoirs</a>
         <a style="margin-left: 400px; color: rgb(255, 255, 255); font-size: 25px;" href="./principal.html"> Inicio</a>
         <a style="font-size: 25px; color: rgb(255, 255, 255); margin-left: 30px;" href="tienda.html"> Tienda </a>
-        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="nosotros.html"> Nosotros</a>
-        <a style="font-size: 25px; color: rgb(252, 252, 252); margin-left: 30px;" href="contacto.html"> Contacto </a> </h1>
+        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="nosotros.html">Nosotros</a>
+        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="video1.html">Ver video</a>
+        <a style="font-size: 25px; color: rgb(251, 249, 253); margin-left: 30px;" href="#video1"></a>
+        <a style="font-size: 25px; color: rgb(252, 252, 252); margin-left: 10px;" href="contacto.html">Contacto </a> </h1>
         
        <a href=""> <img src="petits.png" alt=""></a>
          <a style="font-size: 80px; color: rgb(122, 10, 72); text-align: justify; margin-top: 0px; margin-bottom: 0px;">Amigurumis </a>
